Grace/tests/gibbs/errors/t276.grace
// ERROR = P1037
var x is readable, . := 7
